# What

./: gui.c  gui.h  main.c  makefile
a_evm/: CMakeLists.txt  interface.c  interface.h  main.c  makefile
a_evm/bigChars/: CMakeLists.txt  makefile  myBigChars.c
a_evm/bigChars/test/: main  main.c  makefile  myBigChars.h
a_evm/diskMBR/: mbr.c  mbr.h
a_evm/include/: myBigChars.h  myReadKey.h  mySimpleComputer.h
a_evm/readKey/: CMakeLists.txt  makefile  myReadKey.c
a_evm/readKey/test/: main  main.c
a_evm/simpleComputer/: CMakeLists.txt  makefile  mySimpleComputer.c
a_evm/simpleComputer/test/: SimpleComputer.h  main.c
a_evm/term/: CMakeLists.txt  makefile  myTerm.c  myTerm.h
a_evm/term/test/: main.c  makefile  term_test
